--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
     <meta name="viewport" content="width=device-width" />
     <base href="/" />
+    <link rel="stylesheet" href="/HomePageStyleSheet.css">
 </head>
+
 <body>
-    <script type="text/javascript" src="/User.js"></script>
-    <script type="text/javascript" src="/Vehicle.js"></script>
 
-    Welcome, <span sec:authentication="name">Username</span>!<br><br>
+<script type="text/javascript" src="/User.js"></script>
+<script type="text/javascript" src="/Vehicle.js"></script>
 
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        <button id="all-btn" onclick="printAllUsers()">Show all Users</button><br>
+<div id="Welcome-msg-div">
+    <h1>Welcome, <span sec:authentication="name">Username</span>!</h1>
+    <a href="/logout"><button id="LogOut-btn">LOG OUT</button></a>
+</div>
 
-        <table id="userData-table">
-            <thead>
-            <th id="id_col">ID</th>
-            <th id="ut_col">Type</th>
-            <th id="fn_col">First Name</th>
-            <th id="ln_col">Last Name</th>
-            <th id="afm_col">AFM</th>
-            <th id="ac_col">Area Code</th>
-            <th id="del_col">Delete?</th>
-            </thead>
-            <tbody id="userList"></tbody>
-        </table><br>
-    </div>
+<hr class="hr">
 
-    <button onclick="printAllVehicles()">See Available Vehicles</button><br>
+<div id="AdminShowAllUsers-div" sec:authorize="hasRole('ROLE_ADMIN')">
+    <button id="allU-btn" onclick="printAllUsers()">Show all Users</button><br>
+
+    <table id="userData-table">
+        <thead>
+        <th id="id_col">ID</th>
+        <th id="ut_col">Type</th>
+        <th id="fn_col">First Name</th>
+        <th id="ln_col">Last Name</th>
+        <th id="afm_col">AFM</th>
+        <th id="ac_col">Area Code</th>
+        <th id="del_col">Delete?</th>
+        </thead>
+        <tbody id="userList"></tbody>
+    </table><br>
+</div>
+
+<div id="ShowAllVehicles-div">
+    <button id="allV-btn" onclick="printAllVehicles()">See Available Vehicles</button><br>
 
     <table id="veh-table">
         <thead>
@@ -43,17 +53,23 @@
         </thead>
         <tbody id="vehList"></tbody>
     </table>
+</div>
 
-    <div sec:authorize="hasRole('ROLE_ADMIN')">
-        <br><a href="/newUsers" class="button"><button>Add new Users</button></a>
-        <a href="/newVehicles" class="button"><button>Add new Vehicles</button></a>
-    </div>
+<hr class="hr">
 
-    <div sec:authorize="hasRole('ROLE_USER')">
-        <br><a href="/newVehicles" class="button"><button>Add new Vehicles</button></a>
-    </div>
+<div id="AdminAddNew-div" sec:authorize="hasRole('ROLE_ADMIN')">
+    <br>
+    <Center>
+        <a href="/newVehicles" class="button"><button id="AdminAddNewVs-btn" class="admin">Add new Vehicles</button></a>
+        <a href="/newUsers" class="button"><button id="AdminAddNewUs-btn" class="admin">Add new Users</button></a>
+    </Center>
+</div>
 
-    <br><a href="/logout"><button>LOG OUT</button></a>
+<div id="UserAddNew-div" sec:authorize="hasRole('ROLE_USER')">
+    <br>
+    <Center><a href="/newVehicles" class="button"><button id="UserAddNewVs-btn" class="user">Add new Vehicles</button></a></Center>
+</div>
+
 
 </body>
 </html>
