--- a/src/main/resources/templates/Vehicle/addVehicle.html
+++ b/src/main/resources/templates/Vehicle/addVehicle.html
@@ -2,26 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" />
     <title>Add a new Vehicle</title>
+    <link rel="stylesheet" href="/AddVehicleStyleSheet.css">
 </head>
-    <body>
-        <script type="text/javascript" src="/Vehicle.js"></script>
+<body>
+<script type="text/javascript" src="/Vehicle.js"></script>
+<div id="Header-div">
+    <h1>Add a new Vehicle</h1>
+</div>
 
-        <h1>Add a new Vehicle</h1>
+<div id="FormToAddVehicle-div">
+    <label for="o_afm">Owner AFM: </label>
+    <input type="number" id="o_afm" name="afm" placeholder="What's the owner's AFM" min="1"><br>
+    <label for="brand">Brand: </label>
+    <input type="text" id="brand" name="Brand" placeholder="What's the car's brand?" autocomplete="off"><br>
+    <label for="model">Model: </label>
+    <input type="text" id="model" name="Model" placeholder="What's the car's model?" autocomplete="off"><br>
+    <label for="kteo">KTEO ID: </label>
+    <input type="number" id="kteo" name="KTEO" placeholder="What's the car's KTEO ID?" autocomplete="off" min="1"><br>
+    <label for="regis">Registration: </label>
+    <input type="text" id="regis" name="Registration" placeholder="What's the car's Registration Number?" autocomplete="off"><br><br>
+</div>
+<div id="AddVehiclebtns-div">
+    <button id="newVeh_btn" onclick="addVehicle()">Add Vehicle</button>
+    <button onclick="history.back()">Go Back</button>
+</div>
 
-        <label for="o_afm">Owner AFM: </label>
-        <input type="number" id="o_afm" name="afm" placeholder="What's the owner's AFM" min="1"><br>
-        <label for="brand">Brand: </label>
-        <input type="text" id="brand" name="Brand" placeholder="What's the car's brand?" autocomplete="off"><br>
-        <label for="model">Model: </label>
-        <input type="text" id="model" name="Model" placeholder="What's the car's model?" autocomplete="off"><br>
-        <label for="kteo">KTEO ID: </label>
-        <input type="number" id="kteo" name="KTEO" placeholder="What's the car's KTEO ID?" autocomplete="off" min="1"><br>
-        <label for="regis">Registration: </label>
-        <input type="text" id="regis" name="Registration" placeholder="What's the car's Registration Number?" autocomplete="off"><br><br>
-
-        <button id="newVeh_btn" onclick="addVehicle()">Add Vehicle</button><br><br>
-
-        <button onclick="history.back()">Go Back</button>
-    </body>
+</body>
 </html>
